--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="col-12">
           <div class="button-area d-block">
             <a href="play" class="play-button">Play!</a>
-            <a href="https://github.com/radmanplays/radmanplays.github.io" class="mt-3 play-button github-button">Open
+            <a href="https://github.com/online-mc/online-mc.github.io" class="mt-3 play-button github-button">Open
               in Github</a>
             <a href="serverlist" class="mt-3 play-button serverlist-button">Server List</a>
             <a href="About" class="mt-3 play-button about-button">About and FAQ</a>
@@ -80,7 +80,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <li><a class="dropdown-item" href="https://discord.gg/RpUK3dSRTp">Discord server</a></li>
                   <li><a class="dropdown-item" href="https://github.com/Eaglercraft-Archive/">Eaglercraft Archive</a></li>
                   <li><a class="dropdown-item" href="https://radmanplays.github.io/3kh0X-v1/">3kh0X</a></li>
-                  <li><a class="dropdown-item" href="#">Noteblockhub (soon)</a></li>
                 </ul>
               </div>
             </div>
