--- a/downloads/index.html
+++ b/downloads/index.html
@@ -38,7 +38,7 @@
 	    
 		<h2 class="col-12 text-center mb-3 title-custom text-white">&nbsp;vanilla clients</h2>
 		
-	  <div class="col-md-6 col-12">
+	<div class="col-md-6 col-lg-4">
 		      
 	  <h2 class=".text-white text-dark-white">EaglercraftX Offline u19 1.8.8</h2>
 	  <p class="text-dark-white">The 1.8.8 u19 version of Eaglercraft. Switching to this version is highly recommended from older versions as it introduces a ton of new features, blocks, bug fixes and optimizations.
