--- a/About/index.html
+++ b/About/index.html
@@ -46,7 +46,7 @@
 							<h1 class="dark-text">About this website&nbsp;</h1>
 							<p class="dark-text">This website is created by radmanplays with some html coding and finding all of the eaglercraft clients etc. most of the clients was found and compiled by royaxvirus.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
 							<h2 class="dark-text">About eaglercraft&nbsp;</h2>
-							<p class="dark-text">Eaglercraft is real Minecraft 1.5.2 and 1.8.8 that you can play in any regular web browser. That includes school chromebooks, it works on all chromebooks. It supports both singleplayer (only on 1.5.2) and multiplayer.</p>
+							<p class="dark-text">Eaglercraft is real Minecraft 1.5.2 and 1.8.8 that you can play in any regular web browser. That includes school chromebooks, it works on all chromebooks. It supports both singleplayer and multiplayer.</p>
 							<h2>&nbsp;</h2>
 							<h1>&nbsp;</h1>
 							<h1 class="dark-text">FAQ</h1>
