--- a/downloads/index.html
+++ b/downloads/index.html
@@ -43,10 +43,10 @@
 		<div class="col-md-6 col-12">
 			<div class="button-area d-block">
 				<h2 class=".text-white text-dark-white">Eaglercraft Offline 1.5.2</h2>
-				<p class="text-dark-white">The 1.5.2 version of Eaglercraft. If radmanplays.github.io is blocked on your network, you can use this Offline download to bypass network restrictions.
+				<p class="text-dark-white">The 1.5.2 version of Eaglercraft. If player-k12.github.io is blocked on your network, you can use this Offline download to bypass network restrictions.
 					<br>Make sure to keep your Offline download in a safe location, such as a USB drive or a folder so that teachers can't find it.
 				</p>
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/Eagler_Offline-1.5.2.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/Eagler_Offline-1.5.2.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/1od1Bohaa22BPEiFtfrz_o5PHnSJ_3MRU/view?usp=sharing" class="play-button w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -54,7 +54,7 @@
 			<h2 class=".text-white mt-5 text-dark-white">Eaglercraft Offline Beta 1.3</h2>
 			<p class="text-dark-white">The beta 1.3 beta version of Eaglercraft. I found this version by accident while searching through an eaglercraft archive&nbsp;&nbsp;</p>
 			<div class="button-area d-block">
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/Eagler_Offline_beta-1.3.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/Eagler_Offline_beta-1.3.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/1drODrpGUlx3m-mliNhmsrR99xpSqfego/view?usp=sharing" class="play-button w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -63,7 +63,7 @@
 			<h2 class=".text-white text-dark-white">Kone client 1.8.8 offline</h2>
 			<p class="text-dark-white">a client made by kone for konemc server. this is the offline download of the client. you can also play it by clicking "other" in the "play" page of this website&nbsp;  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 			<div class="button-area d-block">
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/Koneclient-1.8.8-offlineDownload.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/Koneclient-1.8.8-offlineDownload.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/10h5KhQWJ9bmJHEQLb0UyVwaqqFOpJzZt/view?usp=sharing" class="play-button w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 				<h2 class=".text-white text-dark-white">Resent client 4.0 Offline</h2>
 				<h2 class=".text-white text-dark-white"></h2>
 				<p class="mt-2 text-dark-white">The 1.8.8 version of Resent client 4.0 patch 2. the newest version of Resent client! Resent client is a client for eaglecraft and it adds a lot of stuff to it&nbsp;</p>
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/Resent_3.8_Patch-1_Offline_International.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/Resent_3.8_Patch-1_Offline_International.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/17bNZ8Gnvw5_jQRcP7SVXgSgMIPVuiKX1/view" class="play-button play-button2 w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 			<h2 class=".text-white mt-5 text-dark-white">EaglerReborn 1.8.8 offline</h2>
 			<p class="text-dark-white">a remake/fork of eaglercraft made by otterdev101 that aims to resolve DMCA issues and allow joining normal servers!&nbsp;&nbsp;&nbsp;&nbsp;</p>
 			<div class="button-area d-block">
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/EaglerReborn_1.8_indev_Offline_International.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/EaglerReborn_1.8_indev_Offline_International.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/17Su_dEMRMFVHBqlXOY_DfdZCGd3WKxZ-/view?usp=sharing" class="play-button w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -89,7 +89,7 @@
 				<h2 class=".text-white mt-5 text-dark-white">Shadow client 2.5 Offline</h2>
 				<h2 class=".text-white text-dark-white"></h2>
 				<p class="mt-2 text-dark-white">Shadow client is optifine ported to web by PeytonPlayz595. it boosts the fps alot. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/Shadow_Client_2.5_1.8.8_International.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/Shadow_Client_2.5_1.8.8_International.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/18o3tGlRjeoVBRi9pDsW72oluNnZDfePo/view?usp=sharing" class="play-button play-button2 w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -97,7 +97,7 @@
 		<div class="col-md-6 col-12">
 			<h2 class=".text-white text-dark-white">DragonX hacked client 1.8.8 offline</h2>
 			<p class="text-dark-white">the first eaglercraft 1.8.8 hacked client made by fatal. this hacked client is recommended for 1.8.8 use&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-			<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/DragonX-V3_Offline_International-1.8.8.html" class="play-button w-100">Github Download (html)</a>
+			<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/DragonX-V3_Offline_International-1.8.8.html" class="play-button w-100">Github Download (html)</a>
 			<div class="button-area d-block">
 				<a href="https://drive.google.com/file/d/1m0Vh1ee0ehE0hDrhfJpR6D7SxhSEPWEr/view?usp=sharing" class="play-button w-100 mt-3">Google drive Download (html)</a>
 			</div>
@@ -108,7 +108,7 @@
 				<h2 class=".text-white text-dark-white"></h2>
 				<p class="mt-2 text-dark-white">UwU client is made by the same person who made resent client. although its kinda laggy it has a lot of features!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 				<h4>&nbsp;</h4>
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/UwU-client-b2-offline.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/UwU-client-b2-offline.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/1us6HnVa7aZaKqDnY166dL-J7ieWBcQGt/view?usp=sharing" class="play-button play-button2 w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -117,7 +117,7 @@
 			<p class="text-dark-white">a 1.5.2 hacked client with alt manager etc... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 			<div class="button-area d-block">
 				<h5>&nbsp;</h5>
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/Fuchsia-X-Offline_Download-1.5.2.html" class="play-button w-100">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/Fuchsia-X-Offline_Download-1.5.2.html" class="play-button w-100">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/1kUofX0Xmit7YCDwu75-g1wEIAny3z-8q/view?usp=sharing" class="play-button w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
@@ -126,7 +126,7 @@
 				<h2 class=".text-white mt-5 text-dark-white">Oddfuture hacked client 1.5.2  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ </h2>
 				<h2 class=".text-white text-dark-white"></h2>
 				<p class="mt-2 text-dark-white">a 1.5.2 hacked client made by MEDMEX that has a lot of features&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </p>
-				<a href="https://github.com/radmanplays/radmanplays.github.io/releases/download/tag/OddFuture-Offline_Download_1.5.2.html" class="play-button w-100 mt-4">Github Download (html)</a>
+				<a href="https://github.com/player-k12/player-k12.github.io/releases/download/tag/OddFuture-Offline_Download_1.5.2.html" class="play-button w-100 mt-4">Github Download (html)</a>
 				<a href="https://drive.google.com/file/d/11K9HhPQ_t71Vgu0r3GuUMEvYnx7i_w7a/view?usp=sharing" class="play-button play-button2 w-100 mt-3">Google drive Download (html)</a>
 			</div>
 		</div>
